# place

./: LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: client.yml  client_check.yml  server.yml  server_check.yml  ts-server.yml  ts-server_check.yml
server/: Cargo.toml  Dockerfile
server/src/: main.rs  mongo_db.rs
server/src/actors/: mod.rs  socket.rs  socket_data.rs
server/src/api/: grid_routes.rs  mod.rs  socket.rs
server/src/models/: mod.rs  point.rs  socket_messages.rs
ts-server/: Dockerfile  package-lock.json  package.json
ts-server/src/: index.ts  pointModel.ts
www/: Cargo.toml  index.html  package.json  tsconfig.json
www/.nginx/: nginx.conf
www/public/: index.html
www/src/: App.vue  main.rs
www/src/components/: HelloWorld.vue
